--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* GUBEVU INVOICE - MAIN STYLES */
 :root {
-    --primary-color: #c96062;
-    --table-header-bg: #D9686A;
+    --primary-color: #1e3160;
+    --table-header-bg: #29385d;
     --table-header-color: #FFFFFF;
     --text-color: #333;
     --light-text: #666;
