--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@ body {
     }
     
     .item-table th {
-        background-color: #D9686A !important;
+        background-color: #253253 !important;
         color: white !important;
         -webkit-print-color-adjust: exact !important;
         print-color-adjust: exact !important;
